[tool.poetry]
name = "tdd_dates"
version = "0.1.0"
description = ""
authors = ["Marco Richetta <marco.richetta@fluxit.com.ar>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
